Implement saveUserSocial
