# codegen/src/main/resources/openApi/paths/user/user.json
@@ -557,6 +557,12 @@
           },
           "email": {
             "type": "string"
+          },
+          "github": {
+            "type": "string"
+          },
+          "website": {
+            "type": "string"
           }
         }
       },
